--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incident_list.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incident_list.xml
@@ -17,6 +17,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/incidentRecycler"
         app:layout_constraintTop_toBottomOf="@id/timer"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
