--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/layout_incidence_info.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/layout_incidence_info.xml
@@ -4,18 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rounded_background"
     android:padding="10dp"
+    android:layout_marginVertical="5dp"
+    android:layout_marginHorizontal="30dp"
     android:layout_height="wrap_content">
     
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/minute"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="12:00"
+        android:text="12"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:layout_marginStart="128dp"
         android:fontFamily="@font/k2d_medium"
         android:textColor="@color/black"/>
@@ -24,11 +26,10 @@
         android:id="@+id/dorsal"
         style="@style/NormalButton"
         app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/time"
+        app:layout_constraintStart_toEndOf="@id/minute"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:text="2"
-        android:backgroundTint="#3F51B5"
         android:layout_margin="40dp"
         />
 
