--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_microphone.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_microphone.xml
@@ -29,25 +29,28 @@
 
     <ImageButton
         android:id="@+id/micBtn"
-        app:layout_constraintTop_toBottomOf="@id/scoreboard"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/action_background"
-        android:layout_marginStart="150dp"
-        android:layout_width="120dp"
-        android:layout_height="120dp"/>
-
+        android:padding="0dp"
+        android:src="@drawable/mic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scoreboard"
+        android:scaleType="centerInside"/>
     <ImageButton
         android:id="@+id/continueBtn"
-        app:layout_constraintTop_toBottomOf="@id/scoreboard"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="150dp"
-        android:src="@drawable/ic_check"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/action_background"
-        android:layout_width="120dp"
-        android:layout_height="120dp"/>
-
+        android:padding="0dp"
+        android:src="@drawable/ic_check"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scoreboard"
+        android:scaleType="centerInside"/>
 
     <ImageButton
         android:id="@+id/flipBtn"
@@ -59,5 +62,16 @@
         android:layout_width="50dp"
         android:padding="10dp"
         android:layout_height="50dp"/>
+
+    <TextView
+        android:id="@+id/micTextBoard"
+        android:layout_width="514dp"
+        android:layout_height="202dp"
+        android:background="@drawable/textboard"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="151dp"
+        tools:layout_editor_absoluteY="189dp"
+        android:textSize="14dp"
+        android:text="Pulsa para Grabar."/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
